--- a/application/modules/default/views/scripts/support/index.phtml
+++ b/application/modules/default/views/scripts/support/index.phtml
@@ -58,134 +58,10 @@ form .SelectionGroup li label {
     border-color: #46b8da;
 }
 
-
-
-ul.suggested-amounts.less-margin {
-    margin-bottom: 28px !important;
-}
-ul.suggested-amounts {
-    position: relative;
-    margin: 27px 16px 48px 16px;
-    list-style-type: none;
-}
-ul.suggested-amounts.less-margin {
-    margin-bottom: 28px !important;
-}
-ul.suggested-amounts {
-    position: relative;
-    margin: 27px 16px 48px 16px;
-    list-style-type: none;
-}
-.donation-widget ul.suggested-amounts li.amount-item .mdl-radio {
-    width: 100%;
-}
-ul.suggested-amounts li.amount-item .mdl-radio {
-    line-height: 15px;
-}
-ul.suggested-amounts li.amount-item .item-text {
-    display: inline-block;
-    position: relative;
-    margin-left: 23px;
-}
-ul.suggested-amounts li.amount-item .item-text .unit-wrapper {
-    position: absolute;
-    display: inline-block;
-    left: 0;
-}
-ul.suggested-amounts li.amount-item .item-text .amount, ul.suggested-amounts li.amount-item .item-text #custom_amount {
-    font-family: SourceSansPro-Semibold;
-    color: #000;
-    font-size: 24px;
-    opacity: .65;
-}
-
-ul.suggested-amounts li.amount-item {
-    border-bottom: dotted thin #E7E7E7;
-    padding: 16px 0 7px;
-}
-
-ul.suggested-amounts li.amount-item .item-text .amount, ul.suggested-amounts li.amount-item .item-text #custom_amount {
-    font-family: SourceSansPro-Semibold;
-    color: #000;
-    font-size: 24px;
-    opacity: .65;
-}
-ul.suggested-amounts li.amount-item .item-text #custom_amount {
-    margin-top: -8px;
-}
-ul.suggested-amounts li.amount-item .item-text .amount input, ul.suggested-amounts li.amount-item .item-text #custom_amount input {
-    width: 50%;
-    margin: 0;
-    border: 0;
-    border-bottom: 1px solid #d0d0d0;
-    padding: 0;
-    box-shadow: none;
-    background-color: white;
-}
-
-.mdl-btn-group {
-    width: 180px;
-    margin: 0 auto;
-}
-
-.mdl-btn-group.active-basic-color-background div:last-child {
-    border-color: #092d63;
-}
-.mdl-btn-group.active-basic-color-background div {
-    border-color: #092d63;
-    color: #092d63;
-}
-.mdl-btn-group div:last-child {
-    border-radius: 0 3px 3px 0;
-    border-right: 1px solid #41a2d8;
-}
-
-.mdl-btn-group.active-basic-color-background div.active {
-    background-color: #092d63;
-    color: #ffffff;
-}
-.mdl-btn-group.active-basic-color-background div {
-    border-color: #092d63;
-    color: #092d63;
-}
-.mdl-btn-group div.active {
-    background-color: #41a2d8;
-    color: #fff;
-}
-.mdl-btn-group div:first-child {
-    border-radius: 3px 0 0 3px;
-}
-.mdl-btn-group div {
-    display: inline-block;
-    float: left;
-    line-height: 40px;
-    font-size: 12px;
-    width: 90px;
-    border: 1px solid #41a2d8;
-    border-right: 0;
-    vertical-align: middle;
-    text-align: center;
-    color: #41a2d8;
-    cursor: pointer;
-}
-
-.donation-widget.tabs .tabs-footer .dw-btn.basic-color-background {
-    background-color: #092d63;
-    box-shadow: 0 2px 0 0 #061f45;
-}
-.donation-widget.tabs .tabs-footer .dw-btn, .donation-widget.tabs .ty-content .dw-btn {
-    width: 75.8%;
-    height: 54px;
-    margin-bottom: 20px;
-    text-transform: none;
-    background-color: transparent;
-    border-radius: 4px;
-    box-shadow: 0 2px 0 0 transparent;
-    color: #fff;
-    line-height: 27px;
-}
-    
 </style>
+
+<link href="///theme/flatui/css/support_box.css" rel="stylesheet">
+
 <main id="explore-content">
     <section class="wrapper" id="products-wrapper">
         <div class="container-fluid">
