--- a/application/modules/default/views/scripts/support/pay.phtml
+++ b/application/modules/default/views/scripts/support/pay.phtml
@@ -33,7 +33,7 @@ if ($this->error) {
             <input type="hidden" name="business" value="<?= $this->form_merchant ?>">
 
             <input type="hidden" name="lc" value="US">
-            <input type="hidden" name="item_name" value="opendesktop.org">
+            <input type="hidden" name="item_name" value="Thank you for supporting opendesktop.org">
             <input type="hidden" name="item_number" value="1">
             <input type="hidden" name="currency_code" value="USD">
             <input type="hidden" name="no_note" value="1">
