--- a/application/modules/default/views/scripts/support/pay-paypal.phtml
+++ b/application/modules/default/views/scripts/support/pay-paypal.phtml
@@ -25,11 +25,15 @@ if ($this->error) {
 } else {
     ?>
     <div style="text-align: center;">
-        <form action="<?= $this->form_endpoint ?>" method="post" target="_top">
+        <h3>Please wait. We will redirect you to PayPal. </h3>
+        <p>Or press the Donate button:</p>
+        <form action="<?= $this->form_endpoint ?>" method="post" target="_top" id="payform">
             <input type="hidden" name="cmd" value="_donations">
+            <!--<input type="hidden" name="business" value="paypal@opendesktop.org">-->
             <input type="hidden" name="business" value="<?= $this->form_merchant ?>">
+
             <input type="hidden" name="lc" value="US">
-            <input type="hidden" name="item_name" value="opendesktop.org">
+            <input type="hidden" name="item_name" value="Thank you for supporting opendesktop.org">
             <input type="hidden" name="item_number" value="1">
             <input type="hidden" name="currency_code" value="USD">
             <input type="hidden" name="no_note" value="1">
@@ -43,14 +47,14 @@ if ($this->error) {
             <input type="hidden" name="amount" value="<?= $this->amount ?>">
             
             <div class="Actions">
-                <input id="submitBtn" type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                <input  id="submitBtn" type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
             </div>
         </form>
     </div>
     <script>
         //var dgFlow = new PAYPAL.apps.DGFlow({trigger: 'submitBtn'});
-        $("#submitBtn").click();
+        document.getElementById("payform").submit();
         //document.location.href = "<?= $this->checkoutEndpoint ?>?cmd=_ap-payment&paykey=<?= $this->paymentKey ?>";
     </script>
 <?php } ?>
