pling-list popup

--- a/application/modules/default/views/scripts/partials/header/template.phtml
+++ b/application/modules/default/views/scripts/partials/header/template.phtml
@@ -140,5 +140,7 @@ echo $this->render('partials/header/metaheader.phtml'); ?>
                 AboutContent.setup();      
                 PlinglistContent.setup();        
                 LoginContainer.update();
+                PlingsRedirect.setup();
             });
         ');
+
