--- a/application/modules/default/views/scripts/partials/header/metaheader.phtml
+++ b/application/modules/default/views/scripts/partials/header/metaheader.phtml
@@ -218,7 +218,7 @@ $userRoleName = $helperUserRole->userRole();
 
            <ul class="nav nav-pills meta-nav-top right" style="margin-right: 30px;">
               <?php if (Default_Model_DbTable_MemberRole::ROLE_NAME_ADMIN == $userRoleName) : ?>
-               <li><a  id="plingList" href="#" > Pling-List</a> </li>
+               <li><a  id="plingList" href="#plings" > Pling-List</a> </li>
               <?php endif; ?>
                <li><a href="http://blog.opendesktop.org/" target="_blank"> Blog</a> </li>
                <li><a href="http://forum.opendesktop.org/" target="_blank"> Forum</a> </li>
