--- a/application/modules/backend/views/scripts/index/index.phtml
+++ b/application/modules/backend/views/scripts/index/index.phtml
@@ -21,7 +21,28 @@
  **/
 ?>
 <?= $this->partial('yui.phtml'); ?>
+<style type="text/css">
+  table.tablestati{
+    display: block;  
+    background-color: #ccc;  
+    clear: both;
+    margin-top:40px;
+  }
 
+  table.tablestati thead td{
+    font-weight: bold;
+    background-color: #fff;
+  }
+  table.tablestati td{
+        padding:1px;
+        margin: 1px;
+    }
+table.tablestati td.number{
+      text-align: right;
+      width: 80px;
+      padding-right: 10px;
+  }
+</style>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 <script src="https://d3js.org/d3.v4.min.js"></script>
@@ -31,6 +52,13 @@
 <ul class="nav nav-tabs ">
  <li class="active"><a class="newuserprojectTab" href="#d3-line" data-toggle="tab">New Members & Projects </a></li>
  <li ><a class="payoutTab" href="#payoutTab" data-toggle="tab">Payout</a></li> 
+ <li ><a class="payoutNewcomerTab" href="#payoutNewcomerTab" data-toggle="tab">Payout Newcomer</a></li> 
+ <li ><a class="payoutNewloserTab" href="#payoutNewloserTab" data-toggle="tab">Payout Newloser</a></li> 
+<li ><a class="payoutMonthDiffTab" href="#payoutMonthDiffTab" data-toggle="tab">Payout  Month Diff</a></li> 
+
+<li ><a class="payoutCategoryMonthlyTab" href="#payoutCategoryMonthlyTab" data-toggle="tab">Payout  Category monthly</a></li> 
+
+
 </ul>
 <div class="tab-content row"  >
    <div id="d3-line" class="tab-pane active ">
@@ -44,20 +72,26 @@
    <div id="payoutTab" class="tab-pane ">
         
         <div id="payoutyear" style="display: block; float: left; padding-right: 20px"></div>        
-
-        <select id="selectmonth" style="float: left;">
-          <option selected>201708</option>
-          <option>201707</option>
-          <option>201706</option>
-          <option>201705</option>
-        </select>
-         <div id="pie" style="padding:50px; "></div>
-          <div style="display: block; float: right; width: 300px" id="detailContainer"></div>
-         
-       
+        <div id="pie" style="padding:50px; "></div>
+        <div style="display: block; float: right; width: 300px" id="detailContainer"></div>        
 
   </div>
 
+  <div id="payoutNewcomerTab" class="tab-pane">       
+        <div id="payoutNewcomerTabContainer"></div>
+  </div>
+
+  <div id="payoutNewloserTab" class="tab-pane">        
+        <div id="payoutNewloserTabContainer"></div>
+  </div>
+
+  <div id="payoutMonthDiffTab" class="tab-pane">       
+        <div id="payoutMonthDiffTabContainer"></div>
+  </div>
+
+  <div id = "payoutCategoryMonthlyTab" class="tab-pane">
+        <div id="pieCategoryMonthly" style="padding:50px; "></div>        
+  </div>
 
 </div>
 </div> <!--end of tab-->
@@ -65,7 +99,22 @@
 
 
 <script type="text/javascript">
-  
+              
+              function createMonthFilter(selectid,triggerEvent){
+                  let html = '<select id="'+selectid+'" style="float: left;">';       
+                  for(i = 1; i<5; i++){
+                    let oneMonthsAgo = moment().subtract(i, 'months');
+                    if(i==1){
+                          html = html +'<option selected>'+oneMonthsAgo.format('YYYYMM')+'</option>';    
+                    }else{
+                          html = html +'<option>'+oneMonthsAgo.format('YYYYMM')+'</option>';
+                    }
+                  }                          
+                  html = html +'</select>';                                                    
+                  return html;
+              }
+             
+
              $.ajaxSetup ({
                  // Disable caching of AJAX responses
                  // Used when debugging
@@ -73,22 +122,88 @@
              });
          
              $.getScript("/theme/flatui/js/stati/newUserProject.js");
-             $(".newuserprojectTab").click(function() {
-                
+             $(".newuserprojectTab").click(function() {                
                  $.getScript("/theme/flatui/js/stati/newUserProject.js");
-             })
+             });
        
             
-             $(".payoutTab").click(function() {
-                 $('#detailContainer').empty();
-                 $.getScript("/theme/flatui/js/stati/payoutyear.js");
-                 $.getScript("/theme/flatui/js/stati/memberPayout.js");
-             })
-
+            $('#payoutTab').prepend(createMonthFilter('selectmonth'));
              $('#selectmonth').change(function() {                                     
-                   $.getScript("/theme/flatui/js/stati/memberPayout.js");
-                   $('#detailContainer').empty();
+                   $.getScript("/theme/flatui/js/stati/memberPayout.js");               
               });
-         
+            $(".payoutTab").click(function() {
+                $('#detailContainer').empty();
+                $.getScript("/theme/flatui/js/stati/payoutyear.js");
+                $.getScript("/theme/flatui/js/stati/memberPayout.js");
+            });
 
+// payout Category Monthly tab begin 
+             $('#payoutCategoryMonthlyTab').prepend(createMonthFilter('selectmonthCategoryMonthly'));
+             $(".payoutCategoryMonthlyTab").click(function() {                                
+                 $.getScript("/theme/flatui/js/stati/payoutCategoryMonthly.js");
+             });
+             $('#selectmonthCategoryMonthly').change(function() {                                                       
+                   $('.payoutCategoryMonthlyTab').trigger('click');
+              });
+// payout Category Monthly tab end 
+
+            
+            $('#payoutNewcomerTab').prepend(createMonthFilter('selectmonthNewcomer'));
+            $('#selectmonthNewcomer').change(function() {                                                                           
+                   $(".payoutNewcomerTab").trigger('click');
+              });
+             $(".payoutNewcomerTab").click(function() {
+                 $('#payoutNewcomerTabContainer').empty();      
+                  let yyyymm = $( "#selectmonthNewcomer option:selected" ).text();               
+                  $.getJSON( "/backend/index/newcomer?yyyymm="+yyyymm, function( response ) {
+                       let data = response.results;
+                        let table = "<table class='tablestati'>";
+                        $.each( data, function( index, value ){                          
+                              table = table+'<tr><td><a target="_blank" href="https://opendesktop.org/member/'+value.member_id+'">'+value.member_id+'</a></td><td>'+value.username+'</td><td>'+value.paypal_mail+'</td><td class="number">'+value.amount+'</td></tr>';
+                        });      
+                       table = table +"</table>";                                              
+                        $('#payoutNewcomerTabContainer').html(table);                        
+                  });  
+             });
+              
+             $('#payoutNewloserTab').prepend(createMonthFilter('selectmonthNewloser'));              
+             $('#selectmonthNewloser').change(function() {                                                                            
+                    $(".payoutNewloserTab").trigger('click');
+               });
+              $(".payoutNewloserTab").click(function() {
+                  $('#payoutNewloserTabContainer').empty();      
+                   let yyyymm = $( "#selectmonthNewloser option:selected" ).text();               
+                   $.getJSON( "/backend/index/newloser?yyyymm="+yyyymm, function( response ) {
+                        let data = response.results;
+                         let table = "<table class='tablestati'>";
+                         $.each( data, function( index, value ){
+                               table = table+'<tr><td><a target="_blank" href="https://opendesktop.org/member/'+value.member_id+'">'+value.member_id+'</a></td><td>'+value.username+'</td><td>'+value.paypal_mail+'</td><td class="number">'+value.amount+'</td></tr>';
+                         });      
+                        table = table +"</table>";                                              
+                         $('#payoutNewloserTabContainer').html(table);                        
+                   });  
+              });
+
+
+              $('#payoutMonthDiffTab').prepend(createMonthFilter('selectmonthMonthDiff'));           
+              $('#selectmonthMonthDiff').change(function() {                                                                            
+                    $(".payoutMonthDiffTab").trigger('click');
+               });
+              $(".payoutMonthDiffTab").click(function() {
+                  $('#payoutMonthDiffTabContainer').empty();      
+                   let yyyymm = $( "#selectmonthMonthDiff option:selected" ).text();               
+                   $.getJSON( "/backend/index/monthdiff?yyyymm="+yyyymm, function( response ) {
+                        let data = response.results;
+                         let table = "<table class='tablestati'>";
+                         table = table+'<thead><tr><td>Member</td><td>Username</td><td class="number">Diff</td><td>month</td><td class="number">amount</td><td>last month</td><td  class="number">amount </td></tr></thead>';
+                         $.each( data, function( index, value ){
+                               table = table+'<tr><td><a target="_blank" href="https://opendesktop.org/member/'+value.member_id+'">'+value.member_id+'</a></td><td>'+value.username+'</td><td class="number">'+value.am_diff+'</td>'
+                                            +'<td>'+value.ym_akt+'</td><td class="number">'+value.am_akt+'</td>'
+                                            +'<td>'+value.ym_let+'</td><td class="number">'+value.am_let+'</td>'
+                                            ;
+                         });      
+                        table = table +"</table>";                                              
+                         $('#payoutMonthDiffTabContainer').html(table);                        
+                   });  
+              });
 </script>
