--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -2794,6 +2794,19 @@ span.page-views {
           margin-bottom: 20px;
         }
 
+       h3.categorySeperator {
+                       width: 100%; 
+                       text-align: center; 
+                       border-bottom: 2px solid #ccc; 
+                       line-height: 0.1em;
+                       margin: 10px 0 20px; 
+                       display: block;
+                       clear: both;
+                       span { 
+                                   background:#fff; 
+                                   padding:0 10px; 
+                               }
+          }           
         .cat-title {
           padding: 0 5px;
           position: relative;
