--- a/application/modules/default/views/scripts/product/partials/details.phtml
+++ b/application/modules/default/views/scripts/product/partials/details.phtml
@@ -103,14 +103,14 @@ $userRoleName = $helperUserRole->userRole();
         </span>
 
         <div style="clear: both" class="small">(remember the cache) after you change some value below and refresh the page you may encounter some differences to your changes</div>
-        <span class="page-views">
-          <input type="checkbox" id="feature-this-checkbox" <?php echo $this->product->featured == 1 ? ' checked ' : ''; ?> /> toggle featured
+        <span class="page-views ">
+          <input type="checkbox" id="feature-this-checkbox" <?php echo $this->product->featured == 1 ? ' checked ' : ''; ?> />  featured
         </span>
-        <span class="page-views">
-            <input type="checkbox" id="approve-this-checkbox" <?php echo $this->product->approved == 1 ? ' checked ' : ''; ?> /> toggle approved
+        <span class="page-views ">
+            <input type="checkbox" id="approve-this-checkbox" <?php echo $this->product->approved == 1 ? ' checked ' : ''; ?> />  approved
         </span>
-        <span class="page-views">
-            <input type="checkbox" id="spam-checked-checkbox" <?php echo $this->product->spam_checked == 1 ? ' checked ' : ''; ?> /> toggle spam checked
+        <span class="page-views ">
+            <input type="checkbox" id="spam-checked-checkbox" <?php echo $this->product->spam_checked == 1 ? ' checked ' : ''; ?> />  spam checked
         </span>
 
         <script>
