--- a/httpdocs/partials/about.phtml
+++ b/httpdocs/partials/about.phtml
@@ -5,6 +5,13 @@ Started in 2001, openDesktop.org is one of the largest communities where develop
 <br>
 <br>
 
+<h3>Community</h3>
+Building friendships via commenting, voting and support is at the heart of the openDesktop community.
+<br>
+As of today, it counts more than 100,000 registered users and 2.6 million unique visitors each month.
+<br>
+<br>
+
 <h3>Network</h3>
 Part of the openDesktop.org network are sites such as KDE-Look.org, GNOME-Look.org, XFCE-Look.org and many more. 
 <br>
@@ -17,14 +24,8 @@ That´s why content uploaded on one of these sites, gets also displayed on other
 <h3>Openess</h3>
 Our goal is the advancement of free and open source software and libre content.
 <br>
-Therefore participating on all of the platform is completely free. There are also no fees taken from any donations or membership.
+Therefore participating on all of the platform is completely free. 
 <br>
 <br>
 
 
-<h3>Community</h3>
-Building friendships via commenting, voting and support is at the heart of the openDesktop community.
-<br>
-As of today, it counts more than 100,000 registered users and 2.6 million unique visitors each month.
-<br>
-<br>
