--- a/application/modules/default/views/scripts/product/partials/productUpdatesV1.phtml
+++ b/application/modules/default/views/scripts/product/partials/productUpdatesV1.phtml
@@ -22,9 +22,8 @@
 
 $helperHumanTiming = new Default_View_Helper_HumanTiming();
 $date = $helperHumanTiming->humanTiming($this->productUpdate['created_at']);
-$helpBBCode = new Default_View_Helper_Bbcode2html();
 ?>
 <h3 class="product-heading product-update-heading" >
     <?= $this->productUpdate['title'] ?><span class="small light lightgrey product-update-date"> <?= $date['age'] ?> <?= $date['unit'] ?> ago</span>
 </h3>
-<p><?= $helpBBCode->Bbcode2html($this->productUpdate['text']) ?></p>
+<p><?= Default_Model_BBCode::renderHtml($this->productUpdate['text']) ?></p>
