--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -485,6 +485,8 @@ if (Zend_Auth::getInstance()->hasIdentity()){
 
                         <?php echo $this->render('product/partials/details.phtml'); ?>
 
+                        <?php echo $this->render('product/partials/tags.phtml');?>
+
                     </div>
                 </div>
 
