--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1780,6 +1780,15 @@ ul.meta-nav-top
         }
         #files-panel{
           padding-top: 30px;
+          table.table-ocs-file{
+            td{
+               padding: 3px;
+               vertical-align: middle;
+            }            
+          }
+          .btn{
+            padding: 3px 5px;
+          }
         }
         #updates-panel{
           span.product-update-date{
@@ -4029,7 +4038,7 @@ span.page-views {
   }
 
   #files-panel {
-      font-size: 10pt;
+      font-size: 10pt;     
   }
 
   #comments-frame {
