--- a/application/modules/backend/views/scripts/index/index.phtml
+++ b/application/modules/backend/views/scripts/index/index.phtml
@@ -21,113 +21,189 @@
  **/
 ?>
 <?= $this->partial('yui.phtml'); ?>
-
 <style type="text/css">
-    .chart {
-        width: 700px;
-        height: 450px;
-        margin-bottom: 10px;
-    }
+  table.tablestati{
+    display: block;  
+    background-color: #ccc;  
+    clear: both;
+    margin-top:40px;
+  }
 
-    .chart_title {
-        display: block;
-        font-size: 1.2em;
-        font-weight: bold;
-        margin-bottom: 0.4em;
+  table.tablestati thead td{
+    font-weight: bold;
+    background-color: #fff;
+  }
+  table.tablestati td{
+        padding:1px;
+        margin: 1px;
     }
-
-    #tabContainer {
-        width: 720px;
-    }
+table.tablestati td.number{
+      text-align: right;
+      width: 80px;
+      padding-right: 10px;
+  }
 </style>
 
-<script type="text/javascript">
-    $(document).ready(function () {
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
+<script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="/theme/flatui/js/lib/d3pie.min.js"></script>
 
-        $("body").addClass("yui-skin-sam");
+<div class="pling-nav-tabs">
+<ul class="nav nav-tabs ">
+ <li class="active"><a class="newuserprojectTab" href="#d3-line" data-toggle="tab">New Members & Projects </a></li>
+ <li ><a class="payoutTab" href="#payoutTab" data-toggle="tab">Payout</a></li> 
+ <li ><a class="payoutNewcomerTab" href="#payoutNewcomerTab" data-toggle="tab">Payout Newcomer</a></li> 
+ <li ><a class="payoutNewloserTab" href="#payoutNewloserTab" data-toggle="tab">Payout Newloser</a></li> 
+<li ><a class="payoutMonthDiffTab" href="#payoutMonthDiffTab" data-toggle="tab">Payout  Month Diff</a></li> 
 
-        YAHOO.widget.Chart.SWFURL = "/tools/yui_2.9.0/build/charts/assets/charts.swf";
-
-        var dashboardTabView = new YAHOO.widget.TabView();
-
-        dashboardTabView.addTab(new YAHOO.widget.Tab({
-            label: 'New Members',
-            content: '<div class="chart" id="newmemberchart"></div>',
-            active: true
-        }));
-
-        dashboardTabView.addTab(new YAHOO.widget.Tab({
-            label: 'New Products',
-            content: '<div class="chart" id="newprojects"></div>'
-        }));
-
-        dashboardTabView.appendTo('tabContainer');
+<li ><a class="payoutCategoryMonthlyTab" href="#payoutCategoryMonthlyTab" data-toggle="tab">Payout  Category monthly</a></li> 
 
 
-        // source for memberChart
-        var newmemberDataSource = new YAHOO.util.XHRDataSource("/backend/index/getnewmemberstats");
-        newmemberDataSource.responseType = YAHOO.util.DataSource.TYPE_JSON;
-        newmemberDataSource.responseSchema = {
-            fields: ['memberdate', 'daycount'],
-            resultsList: 'results'
-            // metaFields: {totalRecords: "totalRecords" }
-        };
+</ul>
+<div class="tab-content row"  >
+   <div id="d3-line" class="tab-pane active ">
+    <div style="width: 100%; padding: 20px">
+        
+        <div id='d3linelableinline'></div>
+        
+    </div>
+  </div>
 
-        var memberSeriesDef = [
-            {displayName: "Members", yField: "daycount"}
-        ];
+   <div id="payoutTab" class="tab-pane ">
+        
+        <div id="payoutyear" style="display: block; float: left; padding-right: 20px"></div>        
+        <div id="pie" style="padding:50px; "></div>
+        <div style="display: block; float: right; width: 300px" id="detailContainer"></div>        
 
-        YAHOO.pling.getMemberDataTipText = function (item, index, series) {
-            var toolTipText = item[series.yField] + " new Members at";
-            toolTipText += "\n" + item.memberdate;
-            return toolTipText;
-        }
+  </div>
 
-        var amountYAxis = new YAHOO.widget.NumericAxis();
-        amountYAxis.majorUnit = 2;
+  <div id="payoutNewcomerTab" class="tab-pane">       
+        <div id="payoutNewcomerTabContainer"></div>
+  </div>
 
-        var newMemberChart = new YAHOO.widget.LineChart('newmemberchart', newmemberDataSource, {
-            xField: 'memberdate',
-            series: memberSeriesDef,
-            dataTipFunction: YAHOO.pling.getMemberDataTipText,
-            yAxis: amountYAxis,
-            wmode: 'opaque'
-        });
+  <div id="payoutNewloserTab" class="tab-pane">        
+        <div id="payoutNewloserTabContainer"></div>
+  </div>
 
-        //***************************************************************************************************
+  <div id="payoutMonthDiffTab" class="tab-pane">       
+        <div id="payoutMonthDiffTabContainer"></div>
+  </div>
 
-        // source for projectCharts
-        var newprojectDataSource = new YAHOO.util.XHRDataSource("/backend/index/getnewprojectstats");
-        newprojectDataSource.responseType = YAHOO.util.DataSource.TYPE_JSON;
-        newprojectDataSource.responseSchema = {
-            fields: ['projectdate', 'daycount'],
-            resultsList: 'results'
-            // metaFields: {totalRecords: "totalRecords" }
-        };
-
-        var projectSeriesDef = [
-            {displayName: "Products", yField: "daycount"}
-        ];
-
-        YAHOO.pling.getProjectDataTipText = function (item, index, series) {
-            var toolTipText = item[series.yField] + " new Products at";
-            toolTipText += "\n" + item.projectdate;
-            return toolTipText;
-        }
-
-
-        var newProjectChart = new YAHOO.widget.LineChart('newprojects', newprojectDataSource, {
-            xField: 'projectdate',
-            series: projectSeriesDef,
-            dataTipFunction: YAHOO.pling.getProjectDataTipText,
-            yAxis: amountYAxis,
-            wmode: 'opaque'
-        });
-
-
-    });
-</script>
-<h2>pling.it Backend</h2>
-<div id="tabContainer">
+  <div id = "payoutCategoryMonthlyTab" class="tab-pane">
+        <div id="pieCategoryMonthly" style="padding:50px; "></div>        
+  </div>
 
 </div>
+</div> <!--end of tab-->
+
+
+
+<script type="text/javascript">
+              
+              function createMonthFilter(selectid,triggerEvent){
+                  let html = '<select id="'+selectid+'" style="float: left;">';       
+                  for(i = 1; i<5; i++){
+                    let oneMonthsAgo = moment().subtract(i, 'months');
+                    if(i==1){
+                          html = html +'<option selected>'+oneMonthsAgo.format('YYYYMM')+'</option>';    
+                    }else{
+                          html = html +'<option>'+oneMonthsAgo.format('YYYYMM')+'</option>';
+                    }
+                  }                          
+                  html = html +'</select>';                                                    
+                  return html;
+              }
+             
+
+             $.ajaxSetup ({
+                 // Disable caching of AJAX responses
+                 // Used when debugging
+                 cache: false
+             });
+         
+             $.getScript("/theme/flatui/js/stati/newUserProject.js");
+             $(".newuserprojectTab").click(function() {                
+                 $.getScript("/theme/flatui/js/stati/newUserProject.js");
+             });
+       
+            
+            $('#payoutTab').prepend(createMonthFilter('selectmonth'));
+             $('#selectmonth').change(function() {                                     
+                   $.getScript("/theme/flatui/js/stati/memberPayout.js");               
+              });
+            $(".payoutTab").click(function() {
+                $('#detailContainer').empty();
+                $.getScript("/theme/flatui/js/stati/payoutyear.js");
+                $.getScript("/theme/flatui/js/stati/memberPayout.js");
+            });
+
+// payout Category Monthly tab begin 
+             $('#payoutCategoryMonthlyTab').prepend(createMonthFilter('selectmonthCategoryMonthly'));
+             $(".payoutCategoryMonthlyTab").click(function() {                                
+                 $.getScript("/theme/flatui/js/stati/payoutCategoryMonthly.js");
+             });
+             $('#selectmonthCategoryMonthly').change(function() {                                                       
+                   $('.payoutCategoryMonthlyTab').trigger('click');
+              });
+// payout Category Monthly tab end 
+
+            
+            $('#payoutNewcomerTab').prepend(createMonthFilter('selectmonthNewcomer'));
+            $('#selectmonthNewcomer').change(function() {                                                                           
+                   $(".payoutNewcomerTab").trigger('click');
+              });
+             $(".payoutNewcomerTab").click(function() {
+                 $('#payoutNewcomerTabContainer').empty();      
+                  let yyyymm = $( "#selectmonthNewcomer option:selected" ).text();               
+                  $.getJSON( "/backend/index/newcomer?yyyymm="+yyyymm, function( response ) {
+                       let data = response.results;
+                        let table = "<table class='tablestati'>";
+                        $.each( data, function( index, value ){                          
+                              table = table+'<tr><td><a target="_blank" href="https://opendesktop.org/member/'+value.member_id+'">'+value.member_id+'</a></td><td>'+value.username+'</td><td>'+value.paypal_mail+'</td><td class="number">'+value.amount+'</td></tr>';
+                        });      
+                       table = table +"</table>";                                              
+                        $('#payoutNewcomerTabContainer').html(table);                        
+                  });  
+             });
+              
+             $('#payoutNewloserTab').prepend(createMonthFilter('selectmonthNewloser'));              
+             $('#selectmonthNewloser').change(function() {                                                                            
+                    $(".payoutNewloserTab").trigger('click');
+               });
+              $(".payoutNewloserTab").click(function() {
+                  $('#payoutNewloserTabContainer').empty();      
+                   let yyyymm = $( "#selectmonthNewloser option:selected" ).text();               
+                   $.getJSON( "/backend/index/newloser?yyyymm="+yyyymm, function( response ) {
+                        let data = response.results;
+                         let table = "<table class='tablestati'>";
+                         $.each( data, function( index, value ){
+                               table = table+'<tr><td><a target="_blank" href="https://opendesktop.org/member/'+value.member_id+'">'+value.member_id+'</a></td><td>'+value.username+'</td><td>'+value.paypal_mail+'</td><td class="number">'+value.amount+'</td></tr>';
+                         });      
+                        table = table +"</table>";                                              
+                         $('#payoutNewloserTabContainer').html(table);                        
+                   });  
+              });
+
+
+              $('#payoutMonthDiffTab').prepend(createMonthFilter('selectmonthMonthDiff'));           
+              $('#selectmonthMonthDiff').change(function() {                                                                            
+                    $(".payoutMonthDiffTab").trigger('click');
+               });
+              $(".payoutMonthDiffTab").click(function() {
+                  $('#payoutMonthDiffTabContainer').empty();      
+                   let yyyymm = $( "#selectmonthMonthDiff option:selected" ).text();               
+                   $.getJSON( "/backend/index/monthdiff?yyyymm="+yyyymm, function( response ) {
+                        let data = response.results;
+                         let table = "<table class='tablestati'>";
+                         table = table+'<thead><tr><td>Member</td><td>Username</td><td class="number">Diff</td><td>month</td><td class="number">amount</td><td>last month</td><td  class="number">amount </td></tr></thead>';
+                         $.each( data, function( index, value ){
+                               table = table+'<tr><td><a target="_blank" href="https://opendesktop.org/member/'+value.member_id+'">'+value.member_id+'</a></td><td>'+value.username+'</td><td class="number">'+value.am_diff+'</td>'
+                                            +'<td>'+value.ym_akt+'</td><td class="number">'+value.am_akt+'</td>'
+                                            +'<td>'+value.ym_let+'</td><td class="number">'+value.am_let+'</td>'
+                                            ;
+                         });      
+                        table = table +"</table>";                                              
+                         $('#payoutMonthDiffTabContainer').html(table);                        
+                   });  
+              });
+</script>
