updated import jquery

--- a/application/modules/default/views/layout/flat_ui_template.phtml
+++ b/application/modules/default/views/layout/flat_ui_template.phtml
@@ -54,7 +54,7 @@
     <![endif]-->
 
     <script
-            src="http://code.jquery.com/jquery-3.2.1.min.js"
+            src="//code.jquery.com/jquery-3.2.1.min.js"
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
             crossorigin="anonymous"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
@@ -101,7 +101,7 @@
 <script src="/theme/flatui/js/lib/masonry.pkgd.min.js"></script>
 
 <script
-        src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+        src="//code.jquery.com/ui/1.12.1/jquery-ui.min.js"
         integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
         crossorigin="anonymous"></script>
 <script src="/theme/flatui/js/lib/jquery.colorbox-min.js"></script>
@@ -114,7 +114,7 @@
 <script src="/theme/flatui/js/lib/jquery.validate.min.js"></script>
 <script src="/theme/flatui/js/lib/additional-methods.min.js"></script>
 <script src="/theme/flatui/js/lib/jquery.steps.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
 <script src="/theme/backend/js/jquery.cookie.js"></script>
 <script src="/tools/md5.js"></script>
 <script type="text/javascript" src="/tools/fancybox2.1.4/jquery.fancybox.pack.js?v=2.1.4"></script>
