--- a/application/modules/default/views/scripts/explore/index.phtml
+++ b/application/modules/default/views/scripts/explore/index.phtml
@@ -22,6 +22,8 @@
 
 $helperBuildExploreUrl = new Default_View_Helper_BuildExploreUrl();
 $modelInfo = new Default_Model_Info();
+$modelCategory = new Default_Model_DbTable_ProjectCategory();
+$this->dataCategory = $modelCategory->findSingleRow($this->cat_id);
 $this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
 ?>
 <main id="explore-content">
