add debug information

--- a/application/modules/default/views/scripts/product/viewscripts/input_tags_multiselect.phtml
+++ b/application/modules/default/views/scripts/product/viewscripts/input_tags_multiselect.phtml
@@ -51,7 +51,7 @@ $this->inlineScript()->appendScript('
             $modelTagGroup = new Default_Model_TagGroup();
             $groups = $modelTagGroup->fetchGroupHierarchy();
             //$value = array_map('strval', explode(',',$this->element->getValue()));
-            $value = explode(',',$this->element->getValue());
+            $value = empty($this->element->getValue()) ? array() : explode(',',$this->element->getValue());
             foreach($groups as $label => $opt): ?>
                 <optgroup label="<?php echo $label; ?>">
                     <?php foreach ($opt as $id => $name):
